accel/qtest: Support qtest accelerator for windows
The signal "SIGUSR1" is unsupported on Windows, this modification
adds a windows-specific member "sem" to the CPUState structure.
It is used to kick the dummy CPU on windows.

Signed-off-by: Xuzhou Cheng <xuzhou.cheng@windriver.com>

--- a/accel/qtest/meson.build
+++ b/accel/qtest/meson.build
@@ -1,2 +1,8 @@
-qtest_module_ss.add(when: ['CONFIG_SOFTMMU', 'CONFIG_POSIX'],
-                    if_true: files('qtest.c'))
+qtest_ss = ss.source_set()
+qtest_ss.add(files(
+  'qtest.c',
+))
+
+qtest_module_ss.add_all(when: ['CONFIG_SOFTMMU', 'CONFIG_POSIX'],
+                    if_true: qtest_ss)
+qtest_module_ss.add_all(when: ['CONFIG_WIN32'], if_true: qtest_ss)
